--- a/CSS/style.css
+++ b/CSS/style.css
@@ -142,7 +142,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      top: 60px;
+      bottom: 50px;
 }
   
 .wrapper,
